--- a/cocomapapp/templates/base.html
+++ b/cocomapapp/templates/base.html
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="/static/style.css" />
