--- a/cocomapapp/templates/global.html
+++ b/cocomapapp/templates/global.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
-      <script src="../static/vis-4.17.0/dist/vis.js"></script>
-      <link href="../static/vis-4.17.0/dist/vis.css" rel="stylesheet" type="text/css" />
+      <script src="/static/vis-4.17.0/dist/vis.js"></script>
+      <link href="/static/vis-4.17.0/dist/vis.css" rel="stylesheet" type="text/css" />
     <div class="col-sm-9 col-md-9 main">
       <div id="globalNetwork" style="width:100%; height:80%; ">
         <div class="vis-network" tabindex="900" style="position: relative; overflow: hidden; touch-action: pan-y; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); width: 100%; height: 100%;">
