--- a/cocomapapp/templates/global.html
+++ b/cocomapapp/templates/global.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-      <script src="/static/vis-4.17.0/dist/vis.js"></script>
+      <script src="/static/vis-4.17.0/dist/vis.js" type="text/javascript"></script>
       <link href="/static/vis-4.17.0/dist/vis.css" rel="stylesheet" type="text/css" />
     <div class="col-sm-9 col-md-9 main">
       <div id="globalNetwork" style="width:100%; height:80%; ">
