--- a/cocomapapp/templates/global.html
+++ b/cocomapapp/templates/global.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block content %}
       <script src="/static/vis-4.17.0/dist/vis.js" type="text/javascript"></script>
       <link href="/static/vis-4.17.0/dist/vis.css" rel="stylesheet" type="text/css" />
