login input is set to null and logout icon to the right

--- a/cocomapapp/templates/base.html
+++ b/cocomapapp/templates/base.html
@@ -35,7 +35,6 @@
         <ul class="nav navbar-nav">
           <li><a href="/cocomapapp">Home Page <span class="sr-only"></span></a></li>
           <li><a href="#">Profile</a></li>
-          <li><a href="#">Log Out</a></li>
           <li><a href="/cocomapapp/topics/add">Create Topic</a></li>
           <li><a href="#">Add Relationship</a></li>
         </ul>
@@ -43,6 +42,7 @@
 					<a href="#" class="btn btn-info mt7">
           	<span class="glyphicon glyphicon-user"></span> Busra
         	</a>
+					<a href="#">Log Out</a>  <!-- Log Out to the right of navbar -->
 				</div>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
