little change in logout button

--- a/cocomapapp/templates/base.html
+++ b/cocomapapp/templates/base.html
@@ -42,7 +42,9 @@
 					<a href="#" class="btn btn-info mt7">
           	<span class="glyphicon glyphicon-user"></span> Busra
         	</a>
-					<a href="#">Log Out</a>  <!-- Log Out to the right of navbar -->
+					<ul class="nav navbar-nav pull-right">
+						<li><a href="#">Log Out</a></li>  <!-- Log Out to the right of navbar -->
+					</ul>
 				</div>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
