--- a/cocomapapp/templates/login.html
+++ b/cocomapapp/templates/login.html
@@ -38,7 +38,7 @@
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#">Home Page <span class="sr-only"></span></a></li>
                     <li><a href="#">Profile</a></li>
-                    <li><a href="topic/add">Create Topic</a></li>
+                    <li><a href="topics/add">Create Topic</a></li>
                     <li><a href="#">Add Relationship</a></li>
                 </ul>
 
@@ -200,6 +200,17 @@
     }
 
     </style>
+
+    <!-- search bar is added to login page. Following code snippet is copied from base.html-->
+    <div class="row col-sm-9 sticky-footer" style="bottom:0; position:fixed;">
+      <div class="input-group">
+        <input type="text" class="form-control" placeholder="Search for...">
+        <span class="input-group-btn">
+          <button class="btn btn-success" type="button">Search</button>
+          <button style="margin-left: 20px;" class="btn btn-warning" type="button">Advanced Search</button>
+        </span>
+      </div><!-- /input-group -->
+    </div><!-- /.col-lg-6 -->
 </body>
 
 </html>
