--- a/cocomapapp/templates/topicAdd.html
+++ b/cocomapapp/templates/topicAdd.html
@@ -22,8 +22,10 @@
                       <input type="text" id="name" name="name" class="form-control" placeholder="Topic Name">
                       <h1>Relationships</h1>
   										<div class="form-group newRelation">
-  											<input type="text" id="relationships-name" name="relationships-name" class="form-control makeinline" placeholder="Relationship Name">
-  	                    <input id="relationships-topic" name="relationships-topic" class="makeinline" placeholder="Name of a Topic">
+												<table class="">
+													<tr><th><input type="text" id="relationships-name" class="form-control makeinline" placeholder="Relationship Name"></th></tr>
+		                    	<tr><th><input id="relationships-topic" class="makeinline" placeholder="Name of a Topic" style="min-width:600px; text-align:left;"></th></tr>
+												</table>
   										</div>
   										<h1>Tags</h1>
   										<input type="text" id="tags" name="tags" data-role="tagsinput" placeholder="Tag">
