--- a/cocomapapp/templates/global.html
+++ b/cocomapapp/templates/global.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-      <script src="/static/vis-4.17.0/dist/vis.js" type="text/javascript"></script>
-      <link href="/static/vis-4.17.0/dist/vis.css" rel="stylesheet" type="text/css" />
+    <script src="/static/global.js" type="text/javascript"></script>
+    <script src="/static/vis-4.17.0/dist/vis.js" type="text/javascript"></script>
+    <link href="/static/vis-4.17.0/dist/vis.css" rel="stylesheet" type="text/css" />
     <div class="col-sm-9 col-md-9 main">
       <div id="globalNetwork" style="width:100%; height:80%; ">
         <div class="vis-network" tabindex="900" style="position: relative; overflow: hidden; touch-action: pan-y; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); width: 100%; height: 100%;">
@@ -10,47 +11,7 @@
         </div>
       </div>
     </div>
-    <script type="text/javascript">
-
-        var json_string = '[{    "topicId":"1",    "topicName":"Am I Trump?",    "relateTo":[      {"relationId":"14", "topicId":"3", "grade":"10","relationName":"buildTheWall"},      {"relationId":"3", "topicId":"2", "grade":"10","relationName":"is_sarcastic_than"}    ]  },  {    "topicId":"2",    "topicName":"Kitty Videos",    "relateTo":[      {"relationId":"5", "topicId":"3", "grade":"10","relationName":"will_not_exist"}    ]  },  {    "topicId":"3",    "topicName":"In the Future...",    "relateTo":[    ]  }]';
-        var json_array = JSON.parse(json_string);
-        // create an array with nodes
-        var dict1 = [];
-
-        for(i = 0; i < json_array.length; i++){
-          dict1.push({id: json_array[i]['topicId'], label: json_array[i]['topicName'] });
-        }
-        var nodes = new vis.DataSet(dict1);
-
-
-        // create an array with edges
-        var dict2 = [];
-        for(i = 0; i < json_array.length; i++){
-          for(j = 0; j < json_array[i]['relateTo'].length; j++)
-            dict2.push({from: json_array[i]['topicId'], to: json_array[i]['relateTo'][j]['topicId'], arrows:'from' });
-        }
-        var edges = new vis.DataSet(dict2);
-
-
-        // create a network
-        var container = document.getElementById('globalNetwork');
-        var data = {
-          nodes: nodes,
-          edges: edges
-        };
-        var options = {};
-        var network = new vis.Network(container, data, options);
-
-        network.on("click", function (params) {
-            params.event = "[original event]";
-
-            var clickedNode = params['nodes'][0];
-            if(clickedNode != undefined){
-                if(clickedNode<3)
-                  window.location.href = "/cocomapapp/topics/1";
-            }
-            console.log(params);
-            console.log(params['nodes'][0]);
-        });
+    <script>
+          var context = "{{hot_topics|escapejs|safe}}"
     </script>
 {% endblock content %}
