--- a/cocomapapp/templates/topicAdd.html
+++ b/cocomapapp/templates/topicAdd.html
@@ -23,8 +23,11 @@
                       <h1>Relationships</h1>
   										<div class="form-group newRelation">
 												<table class="">
-													<tr><th><input type="text" id="relationships-name" class="form-control makeinline" placeholder="Relationship Name"></th></tr>
-		                    	<tr><th><input id="relationships-topic" class="makeinline" placeholder="Name of a Topic" style="min-width:600px; text-align:left;"></th></tr>
+													<tr>
+														<th><input type="text" id="relationships-name" class="form-control makeinline" placeholder="Relationship Name"></th>
+														<th><input id="relationships-topic" class="makeinline" placeholder="Name of a Topic" style="min-width:600px; text-align:left;"></th>
+													</tr>
+		                    	<tr></tr>
 												</table>
   										</div>
   										<h1>Tags</h1>
