--- a/cocomapapp/templates/topicAdd.html
+++ b/cocomapapp/templates/topicAdd.html
@@ -32,12 +32,27 @@
   										</div>
   										<h1>Tags</h1>
   										<input type="text" id="tags" name="tags" data-role="tagsinput" placeholder="Tag">
+
                   </div>
               </div>
               <label class="checkbox-inline" id="postCheck">
                   <input type="checkbox" id="checkbox" data-toggle="collapse" data-target="#post">Check this if you want to add a post(you can add the post later)</input>
   						</label>
-  						<textarea class="form-control collapse" rows="3" id="post"></textarea> <br/>
+
+							<div class="collapse" id="post">
+									<textarea class="form-control" rows="3"></textarea>
+									<form class="bs-example bs-example-form" method="">
+
+										<div class="input-group" align="center">
+
+												<span class="input-group-addon">
+												Tag:
+												<input type="text" id="tags2" name="tags" data-role="tagsinput" placeholder="Tag">
+											</span>
+										</div>
+									</form>
+							</div>
+
           </div>
           <div class="col-md-1"></div>
         </div>
