--- a/cocomapapp/templates/topic.html
+++ b/cocomapapp/templates/topic.html
@@ -24,6 +24,16 @@
 				<form class="panel" style="background-color:#F8F9FC; padding: 0;" action="" method="post">{% csrf_token %}
 					<div class="panel-body">
 						<textarea class="form-control" name="content"></textarea>
+						<form class="bs-example bs-example-form" method="">
+
+							<div class="input-group" align="center">
+
+									<span class="input-group-addon">
+									Tag:
+									<input type="text" id="tags2" data-role="tagsinput" placeholder="Tag">
+								</span>
+							</div>
+						</form>
 						<button id="submit" class="btn btn-primary btn-lg btn-block">Post</button>
 					</div>
 
