--- a/cocomapapp/templates/topic.html
+++ b/cocomapapp/templates/topic.html
@@ -1,6 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<script>
+			var hot_topics = "{{hot_topics|escapejs|safe}}"
+			var topic = "{{topic|escapejs|safe}}"
+			var posts2 = "{{posts|escapejs|safe}}"
+</script>
 <script src="/static/topic.js" type="text/javascript"></script>
 <link rel="stylesheet" type="text/css" href="/static/topic.css">
 	<div class="col-sm-9 col-md-9 main">
