--- a/cocomapapp/templates/login.html
+++ b/cocomapapp/templates/login.html
@@ -58,7 +58,7 @@
 										<div class="form-group">
 											 <!-- label class="sr-only" for="exampleInputEmail2">Email address</label> -->
 											 <!-- <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Email address" required> -->
-                       {{ loginForm.username }}
+                       {{ loginForm.email }}
 
 										</div>
 										<div class="form-group">
