Link from register to home page is done

--- a/cocomapapp/templates/base.html
+++ b/cocomapapp/templates/base.html
@@ -43,7 +43,7 @@
           	<span class="glyphicon glyphicon-user"></span> Busra
         	</a>
 					<ul class="nav navbar-nav pull-right">
-						<li><a href="#">Log Out</a></li>  <!-- Log Out to the right of navbar -->
+						<li><a href="/cocomapapp/login/">Log Out</a></li>  <!-- Log Out to the right of navbar -->
 					</ul>
 				</div>
       </div><!-- /.navbar-collapse -->
