login and signup pages are now functional

--- a/cocomapapp/templates/signup.html
+++ b/cocomapapp/templates/signup.html
@@ -36,8 +36,8 @@
 
         </div>
     </nav>
-    <div class="col-sm-9 col-md-9 main">
-        <div class="col-md-12">
+    <div class="col-sm-9 col-md-9 main pagination-centered">
+        <div class="col-md-9">
 
             <form class="form" role="form" method="post" action="signup" accept-charset="UTF-8" id="login-nav">
                    {% csrf_token %}
