--- a/cocomapapp/templates/login.html
+++ b/cocomapapp/templates/login.html
@@ -85,7 +85,7 @@
 								 </form>
 							</div>
 							<div class="bottom text-center">
-								New here ? <a href="#"><b>Join Us</b></a>
+								New here ? <a href="/cocomapapp/signup"><b>Join Us</b></a>
 							</div>
 					 </div>
 				</li>
