minor changes in signup

--- a/cocomapapp/templates/signup.html
+++ b/cocomapapp/templates/signup.html
@@ -31,14 +31,15 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">COCOMAP</a>
+                <a class="navbar-brand" href="/cocomapapp/login">COCOMAP</a>
             </div>
 
         </div>
     </nav>
-    <div class="col-sm-9 col-md-9 main pagination-centered">
-        <div class="col-md-9">
-
+    <div class="col-sm-3"></div>
+    <div class="col-sm-6 col-md-9 main center-block container-fluid">
+        <div class="col-md-6 center-block">
+            <br/> <br/>
             <form class="form" role="form" method="post" action="signup" accept-charset="UTF-8" id="login-nav">
                    {% csrf_token %}
                         <div class="form-group">
