--- a/cocomapapp/templates/base.html
+++ b/cocomapapp/templates/base.html
@@ -40,7 +40,7 @@
         </ul>
 				<div class="pull-right">
 					<a href="#" class="btn btn-info mt7">
-          	<span class="glyphicon glyphicon-user"></span> Busra
+          	<span class="glyphicon glyphicon-user"></span> {{ request.session.username }}
         	</a>
 					<ul class="nav navbar-nav pull-right">
 						<li><a href="/cocomapapp/login/">Log Out</a></li>  <!-- Log Out to the right of navbar -->
