topicadd works with frontend

--- a/cocomapapp/templates/topicAdd.html
+++ b/cocomapapp/templates/topicAdd.html
@@ -25,7 +25,7 @@
 												<table class="">
 													<tr>
 														<th><input type="text" id="relationships-name" class="form-control makeinline" placeholder="Relationship Name"></th>
-														<th><input id="relationships-topic" class="makeinline" placeholder="Name of a Topic" style="min-width:600px; text-align:left;"></th>
+														<th><input id="relates_to" class="makeinline" placeholder="Name of a Topic" style="min-width:600px; text-align:left;"></th>
 													</tr>
 												</table>
   										</div>
@@ -59,7 +59,7 @@
           <div class="col-md-4"></div>
           <div class="col-md-4">
               <!-- <a href="/cocomapapp/topic/second" id="publish" style="width:100%" type="button" class="btn btn-primary">Publish</a> -->
-  						<button id="submit" style="width:100%" class="btn btn-primary">Publish</button>
+  						<button id="submit" onClick="AddTopic();" style="width:100%" class="btn btn-primary">Publish</button>
           </div>
           <div class="col-md-4"></div>
           <div class="col-md-5"></div>
