--- a/cocomapapp/templates/topic.html
+++ b/cocomapapp/templates/topic.html
@@ -5,6 +5,7 @@
 			var hot_topics = "{{hot_topics|escapejs|safe}}"
 			var topic = "{{topic|escapejs|safe}}"
 			var posts2 = "{{posts|escapejs|safe}}"
+			var user = "{{user|escapejs|safe}}"
 </script>
 <script src="/static/topic.js" type="text/javascript"></script>
 <link rel="stylesheet" type="text/css" href="/static/topic.css">
