--- a/cocomapapp/templates/topic.html
+++ b/cocomapapp/templates/topic.html
@@ -6,6 +6,7 @@
 			var topic = "{{topic|escapejs|safe}}"
 			var posts2 = "{{posts|escapejs|safe}}"
 			var user = "{{user|escapejs|safe}}"
+			var username = "{{ request.session.username }}"
 </script>
 <script src="/static/topic.js" type="text/javascript"></script>
 <link rel="stylesheet" type="text/css" href="/static/topic.css">
