--- a/cocomapapp/templates/base.html
+++ b/cocomapapp/templates/base.html
@@ -38,13 +38,53 @@
           <li><a href="/cocomapapp/topics/add">Create Topic</a></li>
           <li><a href="#">Add Relationship</a></li>
         </ul>
-				<div class="pull-right">
-					<a href="#" class="btn btn-info mt7">
-          	<span class="glyphicon glyphicon-user"></span> Busra
-        	</a>
-					<ul class="nav navbar-nav pull-right">
-						<li><a href="#">Log Out</a></li>  <!-- Log Out to the right of navbar -->
-					</ul>
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav navbar-right">
+						<li><p class="navbar-text">Already have an account?</p></li>
+						<li class="dropdown">
+						<script type="text/javascript">
+							
+						</script>
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
+						<ul id="login-dp" class="dropdown-menu">
+							<li>
+								 <div class="row">
+										<div class="col-md-12">
+											 <form class="form" role="form" method="post" action="login" accept-charset="UTF-8" id="login-nav">
+													<div class="form-group">
+														 <label class="sr-only" for="exampleInputEmail2">Email address</label>
+														 <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Email address" required>
+													</div>
+													<div class="form-group">
+														 <label class="sr-only" for="exampleInputPassword2">Password</label>
+														 <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password" required>
+																									 <div class="help-block text-right"><a href="">Forget the password ?</a></div>
+													</div>
+													<div class="form-group">
+														 <button type="submit" class="btn btn-primary btn-block" onclick="myFunction(); window.location.href='../cocomapapp'">Sign in</button>
+													</div>
+													<script type="text/javascript">
+													function myFunction() {
+														//password and email set to null
+														document.getElementById("exampleInputPassword2").value = "";
+														document.getElementById("exampleInputEmail2").value = "";
+													}
+													</script>
+													<div class="checkbox">
+														 <label>
+														 <input type="checkbox"> keep me logged-in
+														 </label>
+													</div>
+											 </form>
+										</div>
+										<div class="bottom text-center">
+											New here ? <a href="#"><b>Join Us</b></a>
+										</div>
+								 </div>
+							</li>
+						</ul>
+							</li>
+						</ul>
 				</div>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
