--- a/cocomapapp/templates/topic.html
+++ b/cocomapapp/templates/topic.html
@@ -7,6 +7,7 @@
 			var posts2 = "{{posts|escapejs|safe}}"
 			var user = "{{user|escapejs|safe}}"
 			var username = "{{ request.session.username }}"
+			var topicTags = "{{tags|escapejs|safe}}"
 </script>
 <script src="/static/topic.js" type="text/javascript"></script>
 <link rel="stylesheet" type="text/css" href="/static/topic.css">
@@ -19,7 +20,7 @@
 		      	<a href="/cocomapapp"><b>Zoom Out</b></a>
 		    	</div>
 		    	<h1 id="theTitle" style= "text-align:center;"></h1>
-		    	<div id="topicTags" class="panel panel-default panel-modest panelmb0 pull-right" style="background-color:#F8F9FC;">
+		    	<div id="topicTags" class="panel panel-default panel-modest panelmb0" style="background-color:#F8F9FC; margin-left: 3%;">
 
 		    	</div>
 		  	</div>
