--- a/cocomapapp/templates/topic.html
+++ b/cocomapapp/templates/topic.html
@@ -7,6 +7,7 @@
 			var posts2 = "{{posts|escapejs|safe}}"
 			var user = "{{user|escapejs|safe}}"
 			var username = "{{ request.session.username }}"
+			var tag = "{{ tags|escapejs|safe }}"
 </script>
 <script src="/static/topic.js" type="text/javascript"></script>
 <link rel="stylesheet" type="text/css" href="/static/topic.css">
@@ -37,7 +38,7 @@
 
 									<span class="input-group-addon">
 									Tag:
-									<input type="text" id="tags2" data-role="tagsinput" placeholder="Tag">
+									<input type="text" name="tags" id="tags2" data-role="tagsinput" placeholder="Tag">
 								</span>
 							</div>
 						</form>
