--- a/cocomapapp/templates/searchresult.html
+++ b/cocomapapp/templates/searchresult.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
 {% block content %}
+<script src="/static/searchRes.js" type="text/javascript"></script>
 <div class="col-sm-9 col-md-9 main">
   <div class="container" style="padding-right: 130px !important">
     <h2>Search Results</h2>
-    <ul class="list-group">
-      <li class="list-group-item">
-        <a href="">First Item</a>
+    <ul class="list-group" id="results">
+<!--      <li class="list-group-item">
+        <a href=""></a>
       </li>
       <li class="list-group-item">
         <a href="">Second Item</a>
@@ -24,7 +25,7 @@
       </li>
       <li class="list-group-item">
         <a href="">Seventh Item</a>
-      </li>
+      </li>-->
     </ul>
   </div>
 
