search url is corrected

--- a/cocomapapp/templates/base.html
+++ b/cocomapapp/templates/base.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-		
+
 		<title></title>
 </head>
 <body>
@@ -154,7 +154,7 @@
   </div><!-- /.col-lg-6 -->
 	<script>
     function searchItem(){
-				var url = "../cocomapapp/search/"+document.getElementById("search").value+"/";
+				var url = "/cocomapapp/search/"+document.getElementById("search").value+"/";
 				window.location.href = url;
     }
 </script>
