--- a/cocomapapp/templates/base.html
+++ b/cocomapapp/templates/base.html
@@ -39,11 +39,24 @@
           <li><a href="#">Add Relationship</a></li>
         </ul>
 				<div class="pull-right">
-					<a href="#" class="btn btn-info mt7">
-          	<span class="glyphicon glyphicon-user"></span> {{ request.session.username }}
-        	</a>
-					<ul class="nav navbar-nav pull-right">
-						<li><a href="/cocomapapp/login/">Log Out</a></li>  <!-- Log Out to the right of navbar -->
+          <ul class="nav navbar-nav pull-right">
+            {% if user.is_authenticated %}
+              <li class="pull-right">
+                <div class="dropdown">
+                  <button class="btn btn-info dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                    {{user.username}}
+                    <span class="caret"></span>
+                  </button>
+                  <ul style="z-index:1001;" class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                    <li><a href="#">Profile</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li><a href="/cocomapapp/accounts/logout/">Logout</a></li>
+                  </ul>
+                </div>
+              </li>
+            {% else %}
+						  <li><a href="/cocomapapp/accounts/login/">Login</a></li>
+            {% endif %}
 					</ul>
 				</div>
       </div><!-- /.navbar-collapse -->
