--- a/cocomapapp/templates/topicAdd.html
+++ b/cocomapapp/templates/topicAdd.html
@@ -33,7 +33,7 @@
 												</table>
   										</div>
   										<h1>Tags</h1>
-  										<input type="text" id="tags" name="tags" data-role="tagsinput" placeholder="Tag">
+  										<input type="text" id="tags" name="tags" placeholder="Tag">
 
                   </div>
               </div>
@@ -49,7 +49,7 @@
 
 												<span class="input-group-addon">
 												Tag:
-												<input type="text" id="tags2" data-role="tagsinput" placeholder="Tag">
+												<input type="text" id="tags2" placeholder="Tag">
 											</span>
 										</div>
 									</form>
