tags style correction

--- a/cocomapapp/templates/topicAdd.html
+++ b/cocomapapp/templates/topicAdd.html
@@ -33,7 +33,9 @@
 												</table>
   										</div>
   										<h1>Tags</h1>
-  										<input type="text" id="tags" name="tags" placeholder="Tag">
+											<div style="margin-left:22%; width:55%; float:center; text-align:center;">
+												<input type="text" id="tags" name="tags" placeholder="Tag">
+											</div>
 
                   </div>
               </div>
