--- a/cocomapapp/templates/base.html
+++ b/cocomapapp/templates/base.html
@@ -5,7 +5,7 @@
 <html>
 <head>
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-
+		<script src="/static/base.js"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="/static/style.css" />
     <link rel="stylesheet" type="text/css" href="/static/main.css" />
@@ -98,9 +98,9 @@
 
 	<div class="row col-sm-9 sticky-footer" style="bottom:0; position:fixed;">
 	  <div class="input-group">
-      <input type="text" class="form-control" placeholder="Search for...">
+      <input id="search_field" type="text" class="form-control" placeholder="Search for...">
       <span class="input-group-btn">
-        <button class="btn btn-success" type="button">Search</button>
+        <button id="search_btn" class="btn btn-success" type="button">Search</button>
         <button style="margin-left: 20px;" class="btn btn-warning" type="button">Advanced Search</button>
       </span>
     </div><!-- /input-group -->
