--- a/cocomapapp/templates/topicAdd.html
+++ b/cocomapapp/templates/topicAdd.html
@@ -40,11 +40,11 @@
                   </div>
               </div>
               <label class="checkbox-inline" id="postCheck">
-                  <input type="checkbox" id="checkbox" data-toggle="collapse" data-target="#post">Check this if you want to add a post(you can add the post later)</input>
+                  <input type="checkbox" id="postCheckbox" data-toggle="collapse" data-target="#post">Check this if you want to add a post(you can add the post later)</input>
   						</label>
 
 							<div class="collapse" id="post">
-									<textarea class="form-control" rows="3"></textarea>
+									<textarea id="postText" class="form-control" rows="3"></textarea>
 									<form class="bs-example bs-example-form" method="">
 
 										<div class="input-group" align="center">
@@ -64,7 +64,7 @@
           <div class="col-md-4"></div>
           <div class="col-md-4">
               <!-- <a href="/cocomapapp/topic/second" id="publish" style="width:100%" type="button" class="btn btn-primary">Publish</a> -->
-  						<button id="submit" onClick="AddTopic();" style="width:100%" class="btn btn-primary">Publish</button>
+  						<button id="submit" style="width:100%" class="btn btn-primary">Publish</button>
           </div>
           <div class="col-md-4"></div>
           <div class="col-md-5"></div>
