--- a/cocomapapp/templates/topicAdd.html
+++ b/cocomapapp/templates/topicAdd.html
@@ -29,12 +29,12 @@
 													<tr>
 														<th><input type="text" id="relationships-name" class="form-control makeinline" placeholder="Relationship Name"></th>
 														<th><input id="relates_to" class="makeinline" placeholder="Name of a Topic" style="min-width:600px; text-align:left;"></th>
-                                                        <th><a id="radd1" onclick={document.getElementById('rel2').style.display='table-row';document.getElementById('radd1').style.display='none';}>Add another relation</a></th>
+                                                        <th><a id="rel_add1" onclick={document.getElementById('rel2').style.display='table-row';document.getElementById('rel_add1').style.display='none';}>Add another relation</a></th>
 													</tr>
                                                     <tr id="rel2" style="display: none;">
                                                         <th><input type="text" id="relationships-name2" class="form-control makeinline" placeholder="Relationship Name" ></th>
                                                         <th><input id="relates_to2" class="makeinline" placeholder="Name of a Topic" style="min-width:600px; text-align:left; display: none;"></th>
-                                                        <th><a id="radd2" onclick={document.getElementById('rel3').style.display='table-row';document.getElementById('radd2').style.display='none';}>Add another relation</a></th>
+                                                        <th><a id="rel_add2" onclick={document.getElementById('rel3').style.display='table-row';document.getElementById('rel_add2').style.display='none';}>Add another relation</a></th>
                                                     </tr>
                                                     <tr id="rel3" style="display: none;">
                                                         <th><input type="text" id="relationships-name3" class="form-control makeinline" placeholder="Relationship Name"></th>
