Tags UI is integrated in topic view page

--- a/cocomapapp/templates/topic.html
+++ b/cocomapapp/templates/topic.html
@@ -34,7 +34,7 @@
 
 									<span class="input-group-addon">
 									Tag:
-									<input type="text" name="tags" id="tags2" data-role="tagsinput" placeholder="Tag">
+									<input type="text" name="tags" id="tags" placeholder="Tag">
 								</span>
 							</div>
 						</form>
