--- a/cocomapapp/templates/base.html
+++ b/cocomapapp/templates/base.html
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+		<script src="/static/jquery.1.11.1.min.js"></script>
 		<link href="/static/select2-403/dist/css/select2.min.css" rel="stylesheet" />
 		<script src="/static/select2-403/dist/js/select2.min.js"></script>
 		<script src="/static/selectize.js" type="text/javascript"></script>
