--- a/cocomapapp/templates/global.html
+++ b/cocomapapp/templates/global.html
@@ -1,13 +1,14 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+    <link href="//fonts.googleapis.com/css?family=Luckiest+Guy" rel="stylesheet"> 
     <script src="/static/global.js" type="text/javascript"></script>
     <script src="/static/vis-4.17.0/dist/vis.js" type="text/javascript"></script>
     <link href="/static/vis-4.17.0/dist/vis.css" rel="stylesheet" type="text/css" />
     <div class="col-sm-9 col-md-9 main">
       <div id="globalNetwork" style="width:100%; height:80%; ">
         <div class="vis-network" tabindex="900" style="position: relative; overflow: hidden; touch-action: pan-y; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); width: 100%; height: 100%;">
-          <canvas width="1200" height="800" style=" position: relative; touch-action: none; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); width: 100%; height: 100%;"></canvas>
+          <canvas style=" position: relative; touch-action: none; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); width: 100%; height: 100%;"></canvas>
         </div>
       </div>
     </div>
