now we can send post from android device

--- a/coco-android/Coco/app/src/main/res/layout/activity_topic_detail.xml
+++ b/coco-android/Coco/app/src/main/res/layout/activity_topic_detail.xml
@@ -63,6 +63,7 @@
         android:textColor="@android:color/white" />
 
     <EditText
+        android:id="@+id/postEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
