login page edit

--- a/cocomapapp/templates/account/login.html
+++ b/cocomapapp/templates/account/login.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-<h1>{% trans "Sign Inlo" %}</h1>
+<h1>{% trans "Sign Info" %}</h1>
 
 {% get_providers as socialaccount_providers %}
 
@@ -32,15 +32,26 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 <p>{% blocktrans %}If you have not created an account yet, then please
 <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
 {% endif %}
+<div class="container">
 
-<form class="login" method="POST" action="{% url 'account_login' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-  <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
-</form>
+  <form class="login form-signin" method="POST" action="{% url 'account_login' %}">
+    {% csrf_token %}
+    <h2 class="form-signin-heading">Please sign in</h2>
 
+
+    {{ form.as_p }}
+    {% if redirect_field_value %}
+    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+    {% endif %}
+    <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+    <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
+  </form>
+</div>
+<script type="text/javascript">
+  $(function(){
+    $("#sidebar").remove();
+
+  });
+
+</script>
 {% endblock %}
