--- a/cocomapapp/templates/base.html
+++ b/cocomapapp/templates/base.html
@@ -69,7 +69,7 @@
 
   {% block content %}
   {% endblock %}
-  <div class="col-sm-3 col-md-3 sidebar">
+  <div class="col-sm-3 col-md-3 sidebar" id="sidebar">
 		<div class="text-center">POST FROM USERS YOU FOLLOW</div>
 		</br>
 		<ul class="nav nav-sidebar list-group list-following-posts">
