--- a/cocomapapp/templates/account/login.html
+++ b/cocomapapp/templates/account/login.html
@@ -6,8 +6,9 @@
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 
 {% block content %}
-
-<h1>{% trans "Sign Info" %}</h1>
+<link href="/static/signin.css" rel="stylesheet"/>
+<div class="container-fluid " >
+<h1 class="text-center">{% trans "Sign In" %}</h1>
 
 {% get_providers as socialaccount_providers %}
 
@@ -27,30 +28,39 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 </div>
 
 {% include "socialaccount/snippets/login_extra.html" %}
-
-{% else %}
-<p>{% blocktrans %}If you have not created an account yet, then please
-<a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
 {% endif %}
-<div class="container">
+
 
   <form class="login form-signin" method="POST" action="{% url 'account_login' %}">
     {% csrf_token %}
-    <h2 class="form-signin-heading">Please sign in</h2>
 
 
-    {{ form.as_p }}
-    {% if redirect_field_value %}
-    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-    {% endif %}
-    <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-    <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
+    <div class="to-be-formed  ">
+
+      {{ form.as_p }}
+      {% if redirect_field_value %}
+      <!--<input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" /> -->
+      {% endif %}
+    </div>
+      <!--<a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>-->
+      <button class="primaryAction btn btn-lg btn-primary btn-block" type="submit">{% trans "Sign In" %}</button>
+      <div class="text-center" >
+        <h3>Or</h3>
+      </div>
+      <a class="btn btn-lg btn-success btn-block" href="{{ signup_url }}">Sign up</a>
   </form>
+
+<div class="text-center">
+
+</div>
+
 </div>
 <script type="text/javascript">
   $(function(){
     $("#sidebar").remove();
-
+    $("body").css("padding-top","0px");
+    $("#id_login ").addClass("form-control");
+    $("#id_password ").addClass("form-control");
   });
 
 </script>
