--- a/coco-android/Coco/app/src/main/res/layout/activity_create_topic.xml
+++ b/coco-android/Coco/app/src/main/res/layout/activity_create_topic.xml
@@ -22,13 +22,41 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/activity_margin_8"
             android:hint="Tags" />
-
-        <EditText
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/activity_margin_8"
-            android:hint="Relationships" />
+            android:orientation="horizontal">
 
+
+        <EditText
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/activity_margin_8"
+            android:hint="Relationship Name" />
+
+            <RelativeLayout
+                android:layout_width="150dp"
+                android:layout_height="40dp">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Relation Topic Name"/>
+              <View
+                  android:layout_width="match_parent"
+                  android:layout_height="2dp"
+                  android:background="@color/black"
+                  android:layout_alignParentBottom="true"></View>
+
+            </RelativeLayout>
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorPrimaryDark"
+                android:text="ADD"
+                android:textColor="#fff"/>
+        </LinearLayout>
         <Button
             android:id="@+id/sendButton"
             android:layout_width="wrap_content"
