--- a/coco-android/Coco/app/src/main/res/layout/activity_topic_detail.xml
+++ b/coco-android/Coco/app/src/main/res/layout/activity_topic_detail.xml
@@ -5,51 +5,19 @@
     android:layout_height="match_parent"
     tools:context=".activity.TopicDetailActivity">
 
-
-    <LinearLayout
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/activity_margin_16"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/activity_margin_8"
-            android:text="Trump is a nominee in the 2016 USA elections"
-            android:textColor="@android:color/black"
-            android:textSize="@dimen/text_size_20" />
+    </android.support.v7.widget.RecyclerView>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_margin="@dimen/activity_margin_8"
-            android:background="@android:color/black"/>
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="64dp"
+    android:layout_alignParentBottom="true"
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/activity_margin_8"
-            android:text="I believe he will win the elections"
-            android:textColor="@android:color/black"
-            android:textSize="@dimen/text_size_20" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_margin="@dimen/activity_margin_8"
-            android:background="@android:color/black"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/activity_margin_8"
-            android:text="I believe he will lose the elections"
-            android:textColor="@android:color/black"
-            android:textSize="@dimen/text_size_20" />
-    </LinearLayout>
-
-
+    android:background="#fff">
     <Button
         android:id="@+id/sendButton"
         android:layout_width="wrap_content"
@@ -71,6 +39,6 @@
         android:layout_marginLeft="@dimen/activity_margin_8"
         android:layout_marginTop="@dimen/activity_margin_8"
         android:layout_toLeftOf="@+id/sendButton" />
-
+</RelativeLayout>
 
 </RelativeLayout>
