semantic tag edit

--- a/cocomapapp/templates/topic.html
+++ b/cocomapapp/templates/topic.html
@@ -31,7 +31,7 @@
 							<div class="input-group" align="center">
 								<span class="input-group-addon">
 									Tag:
-									<input type="text" name="tags" id="tags2" data-role="tagsinput" placeholder="Tag">
+									<input type="text" name="tags" id="tags" data-role="tagsinput" placeholder="Tag">
 								</span>
 							</div>
 						</form>
