login signup pages fixed

--- a/cocomapapp/templates/topic.html
+++ b/cocomapapp/templates/topic.html
@@ -6,6 +6,7 @@
 			var topic = "{{topic|escapejs|safe}}"
 </script>
 <script src="/static/topic.js" type="text/javascript"></script>
+<script src="/static/recommend.js" type="text/javascript"></script>
 <link rel="stylesheet" type="text/css" href="/static/topic.css">
 <div class="col-sm-9 col-md-9 main">
 	<!-- title -->
