--- a/cocomapapp/templates/account/login.html
+++ b/cocomapapp/templates/account/login.html
@@ -57,7 +57,7 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 </div>
 <script type="text/javascript">
   $(function(){
-    $("#sidebar").remove();
+    $(".sidebar").remove();
     $("body").css("padding-top","0px");
     $("#id_login ").addClass("form-control");
     $("#id_password ").addClass("form-control");
