--- a/cocomapapp/templates/account/logout.html
+++ b/cocomapapp/templates/account/logout.html
@@ -17,7 +17,7 @@
 </form>
 <script type="text/javascript">
   $(function(){
-    $("#sidebar").remove();
+    $(".sidebar").remove();
     $("body").css("padding-top","0px");
   });
 
