--- a/cocomapapp/templates/account/signup.html
+++ b/cocomapapp/templates/account/signup.html
@@ -25,7 +25,7 @@
 </div>
 <script type="text/javascript">
   $(function(){
-    $("#sidebar").remove();
+    $(".sidebar").remove();
     $("body").css("padding-top","0px");
     $("#id_username ").addClass("form-control");
     $("#id_email ").addClass("form-control");
