--- a/cocomapapp/templates/global.html
+++ b/cocomapapp/templates/global.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-    <link href="//fonts.googleapis.com/css?family=Luckiest+Guy" rel="stylesheet"> 
+    <link href="//fonts.googleapis.com/css?family=Luckiest+Guy" rel="stylesheet">
+    <script src="/static/recommend.js" type="text/javascript"></script>
     <script src="/static/global.js" type="text/javascript"></script>
     <script src="/static/vis-4.17.0/dist/vis.js" type="text/javascript"></script>
     <link href="/static/vis-4.17.0/dist/vis.css" rel="stylesheet" type="text/css" />
