tags in topic view page improved

--- a/cocomapapp/templates/topic.html
+++ b/cocomapapp/templates/topic.html
@@ -17,7 +17,7 @@
 		      	<a href="/cocomapapp"><b>Zoom Out</b></a>
 		    	</div>
 		    	<h1 id="theTitle" style= "text-align:center;"></h1>
-		    	<div id="topicTags" class="panel panel-default panel-modest panelmb0" style="background-color:#F8F9FC; margin-left: 3%;">
+		    	<div id="topicTags" style="margin:3%; font-size:20px;" >
 
 		    	</div>
 		  	</div>
