--- a/cocomapapp/templates/base.html
+++ b/cocomapapp/templates/base.html
@@ -41,7 +41,7 @@
         <ul class="nav navbar-nav">
 					{% if user.is_authenticated %}
           <li><a href="/cocomapapp/topics/add">Create Topic</a></li>
-          <li><a href="#">Add Relationship</a></li>
+          <li><a href="/cocomapapp/addRelation/1/">Add Relationship</a></li>
 					{% endif %}
         </ul>
 		<div class="pull-right">
