--- a/cocomapapp/templates/searchresult.html
+++ b/cocomapapp/templates/searchresult.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <script src="/static/searchRes.js" type="text/javascript"></script>
+<script src="/static/recommend.js" type="text/javascript"></script>
 <div class="col-sm-9 col-md-9 main">
   <div class="container" style="padding-right: 130px !important">
     <h2>Search Results</h2>
