--- a/cocomapapp/templates/topic.html
+++ b/cocomapapp/templates/topic.html
@@ -8,6 +8,7 @@
 <script src="/static/topic.js" type="text/javascript"></script>
 <script src="/static/recommend.js" type="text/javascript"></script>
 <link rel="stylesheet" type="text/css" href="/static/topic.css">
+<input type="hidden" id="userId" value={{user.id}}>
 <div class="col-sm-9 col-md-9 main">
 	<!-- title -->
 	<div class="mb-for-footer">
