topic tags are shown on topic page

--- a/coco-android/Coco/app/src/main/res/layout/activity_topic_detail.xml
+++ b/coco-android/Coco/app/src/main/res/layout/activity_topic_detail.xml
@@ -4,12 +4,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.TopicDetailActivity">
+<TextView
+    android:id="@+id/text_tag"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:textColor="@color/colorPrimaryDark"
+    android:textStyle="bold"/>
+
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="64dp">
+        android:paddingBottom="64dp"
+        android:layout_below="@id/text_tag">
 
     </android.support.v7.widget.RecyclerView>
 
