--- a/cocomapapp/static/main.css
+++ b/cocomapapp/static/main.css
@@ -49,12 +49,11 @@ body {
 .sidebar {
     bottom: 0;
     left: 0;
-    z-index: 1000;
     display: block;
     padding: 20px;
     overflow-x: hidden;
     overflow-y: auto;
-    background-color: #f5f5f5;
+    background-color: #424242;
     border-right: 1px solid #eee;
 }
 
