Global page, size of the circles are corrected

--- a/cocomapapp/static/main.css
+++ b/cocomapapp/static/main.css
@@ -8,7 +8,7 @@ html {
 
 body {
 	font-family: "ProximaNova-Light" !important;
-  background-color: #A9D0F5 !important;
+  background-color: #CEECF5 !important;
 }
 
 .circle1 {
