--- a/cocomapapp/templates/infocus.html
+++ b/cocomapapp/templates/infocus.html
@@ -12,7 +12,7 @@
 {% if user.is_authenticated %}
   <script type="text/javascript">
     $(".navbarlist").append(
-    '<li><a href="/cocomapapp/addRelation/'+searchId +'/">Add Relationship</a></li>'
+    '<li><a style="color:#ffffff; " href="/cocomapapp/addRelation/'+searchId +'/">Add Relationship</a></li>'
     );
   </script>
 {% endif %}
